validate: pipeline: Handle the case where a pad has no monitor

We do not monitor ghost pads, only real pads, so this is a totally
legitimate case.

https://bugzilla.gnome.org/show_bug.cgi?id=792536